# sonic-sairedis-dev

./: .gitmodules  CMakeLists.txt  README.md  build.sh  configure.ac.diff  copy-swss-header-file-and-library.sh  restore.sh  test_syncd.cpp
patch/: SAI_meta_Makefile.patch  configure.ac.patch
shell/: build.sh  install_dependencies.sh  install_tools.sh  restore.sh
